# CSPGWorkshop

./: CMakeLists.txt  README.md
Demos/: goose_cb_all_positions.pcap  goose_cb_on_position.pcap
Lab01/publisher/libiec61850/: CMakeLists.txt
Lab01/publisher/libiec61850/cspg/lab01/: Makefile  lab01_goose_publisher.c
Lab01/publisher/libiec61850/cspg/lab01_optional/: CMakeLists.txt  Makefile  lab01_optional_goose_publisher.c
Lab01/subscriber/libiec61850/cspg/lab01/: Makefile
Lab01/subscriber/libiec61850/cspg/lab01_optional/: CMakeLists.txt  Makefile  lab01_optional_goose_subscriber.c
Lab02/: goose_capture.sh
Lab03/publisher/libiec61850/cspg/lab03/: Makefile  lab03_goose_publisher_hmac.c
Lab03/subscriber/libiec61850/cspg/lab03/: lab03_goose_subscriber_hmac.c
Lab03/subscriber/libiec61850/src/goose/: goose_receiver.c  goose_receiver.h
Lab_Part1/: goose_cb_off_position.pcap
Labs/Lab01/publisher/libiec61850/cspg/lab01/: CMakeLists.txt
Labs/Lab01/subscriber/libiec61850/: CMakeLists.txt
Labs/Lab01/subscriber/libiec61850/cspg/lab01/: CMakeLists.txt  lab01_goose_subscriber.c
Labs/Lab02/: goose_capture.sh  masquerade_replay.py
Labs/Lab03/publisher/libiec61850/: CMakeLists.txt
Labs/Lab03/publisher/libiec61850/cspg/: CMakeLists.txt
Labs/Lab03/publisher/libiec61850/cspg/lab03/: CMakeLists.txt
Labs/Lab03/publisher/libiec61850/src/goose/: goose_publisher.c  goose_publisher.h
Labs/Lab03/subscriber/libiec61850/: CMakeLists.txt
Labs/Lab03/subscriber/libiec61850/cspg/lab03/: CMakeLists.txt  Makefile
Labs/Lab03/subscriber/libiec61850/src/: CMakeLists.txt
lab01/: Readme.md
lab01/cspg/lab01_publisher/: CMakeLists.txt  lab01_goose_publisher.c
lab01/cspg/lab01_subscriber/: lab01_goose_subscriber.c
